Cambio de dibujo :3

--- a/index.html
+++ b/index.html
@@ -166,14 +166,41 @@
     <!-- CONSERVAR FORMATO -->
     <div class="conservar-formato">
         <pre>
-            ___________________________
-             I'm an expert in my field.
-            ---------------------------
-                \   ^__^
-                 \  (oo)\_______
-                    (__)\       )\/\
-                        ||----w |
-                        ||     ||
+                                                                      ___
+                                                       .~))>>
+                                                      .~)>>
+                                                    .~))))>>>
+                                                  .~))>>             ___
+                                                .~))>>)))>>      .-~))>>  
+                                              .~)))))>>       .-~))>>)>
+                                            .~)))>>))))>>  .-~)>>)>
+                        )                 .~))>>))))>>  .-~)))))>>)>
+                     ( )@@*)             //)>))))))  .-~))))>>)>
+                   ).@(@@               //))>>))) .-~))>>)))))>>)>
+                 (( @.@).              //))))) .-~)>>)))))>>)>
+               ))  )@@*.@@ )          //)>))) //))))))>>))))>>)>
+            ((  ((@@@.@@             |/))))) //)))))>>)))>>)>
+           )) @@*. )@@ )   (\_(\-\b  |))>)) //)))>>)))))))>>)>
+         (( @@@(.@(@ .    _/`-`  ~|b |>))) //)>>)))))))>>)>
+          )* @@@ )@*     (@) (@)  /\b|))) //))))))>>))))>>
+        (( @. )@( @ .   _/       /  \b)) //))>>)))))>>>_._
+         )@@ (@@*)@@.  (6,   6) / ^  \b)//))))))>>)))>>   ~~-.
+      ( @jgs@@. @@@.*@_ ~^~^~, /\  ^  \b/)>>))))>>      _.     `,
+       ((@@ @@@*.(@@ .   \^^^/' (  ^   \b)))>>        .'         `,
+        ((@@).*@@ )@ )    `-'   ((   ^  ~)_          /             `,
+          (@@. (@@ ).           (((   ^    `\        |               `.
+            (*.@*              / ((((        \        \      .         `.
+                              /   (((((  \    \    _.-~\     Y,         ;
+                             /   / (((((( \    \.-~   _.`" _.-~`,       ;
+                            /   /   `(((((()    )    (((((~      `,     ;
+                          _/  _/      `"""/   /'                  ;     ;
+                      _.-~_.-~           /  /'                _.-~   _.'
+                    ((((~~              / /'              _.-~ __.--~
+                                       ((((          __.-~ _.-~
+                                                   .'   .~~
+                                                   :    ,'
+                                                   ~~~~~
+
         </pre>        
     </div>
     <hr>
