--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
     <div class="codigo">
         <pre>
             <code class="language-pascal">
-                var i: Integer;
-                begin
-                    i := 1;
-                end.
+                for(int i = 0; i < 10; i += 1){
+                    cout << "hola";
+                }
             </code>
         </pre>
     </div>
