--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="contacto">
         <p>Contacte al autor de esta página:</p>
         <address>
-            <a href="mailto:jim@rock.com">fbeltran@ucb.edu.bo</a><br>
+            <a href="mailto:jim@rock.com">elian.tito@ucb.edu.bo</a><br>
             <a href="tel:+13115552368">(311) 555-2368</a>
         </address>
     </div>
