--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     <div class="contacto">
         <p>Contacte al autor de esta página:</p>
         <address>
-            <a href="mailto:jim@rock.com">elian.tito@ucb.edu.bo</a><br>
-            <a href="tel:+13115552368">(311) 555-2368</a>
+            <a href="mailto:elianFTG.com">elian.tito@ucb.edu.bo</a><br>
+            <a href="tel:+7777777777">(311) 7777777777</a>
         </address>
     </div>
     <hr>
